Better explanation for loading a vault (#17)

--- a/src/locales/en/messages.json
+++ b/src/locales/en/messages.json
@@ -19,6 +19,8 @@
   "ASplrL": "PassPhrase",
   "OBjVs9": "PassPhrase is required",
   "VBf4j2": "Save a PassPhrase",
+  "60dG38": "Insert your code vault...",
+  "eFnYSo": "Loading an existing vault",
   "J/hVSQ": "{0}",
   "tMxZli": "{0} words",
   "1ClUjd": "+1 random word",
@@ -89,6 +91,7 @@
   "vJc7UN": "Enter pairing token from desktop app",
   "JxXP1G": "Enter Password",
   "fFqj/Z": "Enter this Extension ID:",
+  "Ku4SZo": "Enter your vault code…",
   "8glT2S": "Enter Your Vault Password",
   "smbcKU": "Exit Vault",
   "Jy5Uk6": "Expiry date",
@@ -108,6 +111,8 @@
   "ePYQjq": "Identity",
   "Iz9tXU": "Identity card",
   "Ty40tl": "Identity verified! Please confirm to complete pairing.",
+  "phIZif": "Import an existing vault",
+  "ZO1rmB": "Import vault",
   "r7QI34": "Incorrect password. You have {remainingAttempts} attempts before the app locks for 5 minutes.",
   "STIFXV": "Insert Application name",
   "4Km0yF": "Insert country",
@@ -120,7 +125,6 @@
   "3q9GJU": "Insert Vault’s password",
   "f0aNiE": "Insert WI-FI Name",
   "txHQLI": "Insert WI-FI Password",
-  "60dG38": "Insert your code vault...",
   "QMXO01": "Insert your nationality",
   "vAkQVZ": "Insert zip",
   "5tT0+u": "Invalid email format",
@@ -135,7 +139,6 @@
   "ct2SYD": "Last 7 days",
   "CQ9Ic8": "Last sync on {lastSyncDate}",
   "066UQl": "Load a vault",
-  "eFnYSo": "Loading an existing vault",
   "Z3FXyt": "Loading...",
   "Ht/O36": "Log in and select vault",
   "z0t9bb": "Login",
@@ -237,6 +240,7 @@
   "qvnG21": "Unlock your Personal Vault to access your stored passwords.",
   "DdmCgY": "Use suggested password or generate one",
   "CFrwEE": "Use your device or hardware key",
+  "hNZwju": "Using PearPass on your other device, use \"Add Device\" to generate a QR or connection code to pair your account. This method keeps your account secure.",
   "uSMfoN": "Verify",
   "eE0JZ4": "Version",
   "On0aF2": "Website",
