--- a/src/locales/en/messages.json
+++ b/src/locales/en/messages.json
@@ -30,6 +30,8 @@
   "Du6bPw": "Address",
   "N40H+G": "All",
   "A3Fnxc": "All Items",
+  "iJPIJ8": "Allow access to HTTP websites. When off, only HTTPS is allowed.",
+  "j6O3GE": "Allow non-secure websites",
   "0gPQCa": "Always",
   "jfyXW2": "Always require identity verification when using passkeys.",
   "IrC12v": "Application",
@@ -88,6 +90,7 @@
   "O3oNi5": "Email",
   "87uClH": "Email or username",
   "JLIF7D": "Enable \"Browser Extension\"",
+  "RwI69M": "Enable browser extension",
   "drpMdZ": "Enable the autofill in the browser extension",
   "/MU2Sw": "Enable the reminders to change your passwords",
   "lYGfRP": "English",
@@ -100,6 +103,7 @@
   "smbcKU": "Exit Vault",
   "i9qiyR": "Expires in",
   "Jy5Uk6": "Expiry date",
+  "w1DgiA": "Extension disabled on this site",
   "FJS81K": "Failed to get identity",
   "M+kTqx": "Failed to get identity. Please ensure the desktop app is running.",
   "FCxK4w": "Failed to load vault. Please check your invite code.",
@@ -107,6 +111,7 @@
   "2roTVj": "Feedback sent",
   "U3fNT9": "Folder already exists",
   "TLn0MK": "For your security, access is locked for 5 minutes.",
+  "p6IKje": "For your security, the extension is disabled on non-secure HTTP websites by default. If you trust this site, you can enable the extension for this website only.",
   "nLC6tu": "French",
   "0W0FHK": "Full name",
   "5iyJje": "Gender",
